# ChessMat

./: Board.h  CMakeLists.txt  ChessMat.cbp  ChessMat.depend  ChessMat.layout  MinMax.c  README.md  affichage.c  evaluation_des_pieces.h  initialisation.c  main.c  regle_de_deplacement.c
Les versions/v1/: main.c
Les versions/v2/: Board.txt  affichage.txt  initialisation.txt  main.c
include/: affichage.h
src/: affichage.cpp
